fix: Always place the copy icon on the right side on mobile

--- a/assets/sass/anchorlink.scss
+++ b/assets/sass/anchorlink.scss
@@ -1,10 +1,20 @@
 .a-anchorlink {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  margin-bottom: 1.2rem;
+  align-items: center;
+  column-gap: .8rem;
+
+  @media (max-width: #{$breakpoint-md}) {
+    justify-content: space-between;
+  }
 }
 
-.a-anchorlink::before {
-  content: "";
+.a-anchorlink > h2 {
+  margin-bottom: 0;
+}
+
+.o-divider {
   display: block;
   width: 100%;
   margin: 2rem 0;
@@ -21,7 +31,6 @@
   height: 3.2rem;
   align-items: center;
   justify-content: center;
-  margin-left: .8rem;
   border-radius: var(--border-radius-s);
   opacity: .8;
   text-decoration: none;
